--- a/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,8 +89,14 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Scripts/FlickeringLight_BP.FlickeringLight_BP
 OpenAssetsAtExit=/Game/Assets/LampPost/metal.metal
-OpenAssetsAtExit=/Game/Assets/LampPost/uploads_files_1914280_street+lamp.uploads_files_1914280_street+lamp
+OpenAssetsAtExit=/Game/Assets/LampPost/StreetLamp.StreetLamp
 OpenAssetsAtExit=/Game/Assets/LampPost/glass.glass
+OpenAssetsAtExit=/Game/Assets/LampPost/GlassGlow.GlassGlow
+OpenAssetsAtExit=/Game/Assets/ParkBench/Steel.Steel
+OpenAssetsAtExit=/Game/Assets/ParkBench/ParkBench.ParkBench
+OpenAssetsAtExit=/Game/Assets/ParkBench/woods.woods
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -339,13 +345,101 @@ FirstPersonCharacter_C.Pawn=True
 FirstPersonCharacter_C.Replication=True
 FirstPersonCharacter_C.Input=True
 FirstPersonCharacter_C.Actor=True
+LevelBounds.TransformCommon=True
+LevelBounds.LevelBounds=True
+LevelBounds.Replication=True
+LevelBounds.Actor=True
+BlockingVolume.TransformCommon=True
+BlockingVolume.Collision=True
+BlockingVolume.Navigation=True
+BlockingVolume.Tags=True
+BlockingVolume.Cooking=True
+BlockingVolume.Replication=True
+BlockingVolume.BrushSettings=True
+BlockingVolume.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+FirstPersonCharacter_C.Default=True
+FirstPersonCharacter_C.Tick=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+MotionControllerComponent.Variable=True
+MotionControllerComponent.TransformCommon=True
+MotionControllerComponent.Sockets=True
+MotionControllerComponent.Physics=True
+MotionControllerComponent.Collision=True
+MotionControllerComponent.Lighting=True
+MotionControllerComponent.Rendering=True
+MotionControllerComponent.Navigation=True
+MotionControllerComponent.Visualization=True
+MotionControllerComponent.MotionController=True
+MotionControllerComponent.Tags=True
+MotionControllerComponent.ComponentReplication=True
+MotionControllerComponent.Activation=True
+MotionControllerComponent.Cooking=True
+MotionControllerComponent.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+FirstPersonHUD_C.Tick=True
+FirstPersonHUD_C.Default=True
+FirstPersonHUD_C.HUD=True
+FirstPersonHUD_C.Collision=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/LampPost/GlassGlow
-MRUItem1=/Game/Assets/LampPost/glass
-MRUItem2=/Game/Assets/LampPost/uploads_files_1914280_street+lamp
-MRUItem3=/Game/Assets/LampPost/metal
-MRUItem4=/Game/Scripts/FlickeringLight_BP
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/Assets/ParkBench/woods
+MRUItem3=/Game/Assets/ParkBench/uploads_files_839016_OutdoorParkBenches_1_
+MRUItem4=/Game/Assets/ParkBench/Steel
+MRUItem5=/Game/Assets/LampPost/GlassGlow
+MRUItem6=/Game/Assets/LampPost/glass
+MRUItem7=/Game/Assets/LampPost/uploads_files_1914280_street+lamp
+MRUItem8=/Game/Assets/LampPost/metal
+MRUItem9=/Game/Scripts/FlickeringLight_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/Scripts/FlickeringLight_BP.FlickeringLight_BP=1
@@ -354,13 +448,16 @@ MRUItem4=/Game/Scripts/FlickeringLight_BP
 bHideUnrelatedNodes=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Assets/LampPost/uploads_files_1914280_street+lamp.uploads_files_1914280_street+lamp;
+RecentlyPlaced=/Game/Assets/ParkBench/ParkBench.ParkBench;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
+RecentlyPlaced=/Script/Engine.LevelBounds;
+RecentlyPlaced=/Game/Assets/LampPost/StreetLamp.StreetLamp;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Game/Scripts/FlickeringLight_BP.FlickeringLight_BP;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -369,6 +466,7 @@ DeleteVariableInUse_Warning=False
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
@@ -486,5 +584,5 @@ bConvertSceneUnit=False
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
