--- a/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,6 +105,7 @@ ShowUnusedLayers=True
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 MaterialInstanceConstant=
+PostProcessVolume=PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessVolume.Rendering Features.Rendering Features|Reflections,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Rendering Features.Rendering Features|Misc,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -502,6 +503,12 @@ StaticMeshComponent.Navigation=True
 StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+Volume.TransformCommon=True
+Volume.Replication=True
+Volume.BrushSettings=True
+Volume.Actor=True
+PostProcessVolume.LOD=True
+PostProcessVolume.Cooking=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Scripts/FlickeringLight_BP
@@ -541,6 +548,7 @@ MRUItem14=/Game/Assets/LampPost/metal
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Game/Assets/BigBen/St_Stephen_s_Tower__Big_Ben___London.St_Stephen_s_Tower__Big_Ben___London;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
@@ -555,15 +563,15 @@ RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactor
 RecentlyPlaced=/Game/Scripts/FlickeringLight_BP.FlickeringLight_BP;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
 
 [DetailPropertyExpansion]
-PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MeshColorPaintingToolProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
 MeshVertexPaintingToolProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
